# system_monitor

./: CMakeLists.txt  README.md  main.cpp  note.txt  vcpkg.json
assets/: font.h
cpu/: cpu.cpp  cpu.h  cpu_linux.cpp  cpu_windows.cpp  cpu_windows.h
process/: process.cpp  process.h
processes/: processes.cpp  processes.h  processes_linux.cpp  processes_windows.cpp
ram/: ram.h  ram_linux.cpp  ram_linux.h  ram_windows.cpp  ram_windows.h
ui/: ui.cpp  ui.h
